--- a/src/scss/components/_cart.scss
+++ b/src/scss/components/_cart.scss
@@ -7,8 +7,8 @@
   height: calc(100% - 92px);
   width: 100vw;
   transform: translateY(94px);
-  transition: 1s;
-  overflow: hidden;
+  transition: transform 1s;
+  overflow: auto;
   opacity: 0;
   font-size: 40px;
   visibility: hidden;
@@ -18,6 +18,7 @@
     top: -42px;
     min-height: calc(100vh - 146px);
     height: calc(100% - 140px);
+    width: calc(100vw - 17px);
   }
 
   &.show {
