--- a/src/scss/components/_shopping-bag.scss
+++ b/src/scss/components/_shopping-bag.scss
@@ -2,7 +2,7 @@
   position: absolute;
   top: 94px;
   left: 0;
-  width: 100vw;
+  width: calc(100vw - 17px);
 }
 
 .shopping-bag {
